# avatar-factory

./: .dockerignore  .env.example  .env.test.example  .gitignore  BUILD_TOOLS.md  INSTALLATION_METHODS.md  INSTALL_GUIDE.md  Justfile  LAPTOP_TEST_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCRIPTS_README.md  SETUP.md  TEST_RESULTS.md  WHICH_METHOD.md  cpu-requirements.txt  cpu-server.py  docker-compose.full.yml  docker-compose.yml  frontend-server.py  install.sh  mock-gpu-server.py  next.config.js  package-lock.json  package.json  quick-start.sh  server.js  start-frontend.bat  start-frontend.sh  start.sh  test-api-full.ts  test-api.sh  test-basic.ts  test-full-api.ts  test-gpu-diagnostics.sh  test-lipsync-remote.sh  test-video-generation.ts  tsconfig.json  (+1 more)
.github/workflows/: docker-build-test.yml
app/: layout.tsx  page.tsx
app/api/health/: route.ts
app/api/upload/: route.ts
app/api/videos/[id]/: route.ts
app/api/videos/create/: route.ts
docs/: API.md  DEPLOYMENT.md  INSTALL_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  STARTUP_GUIDE.md  TESTING.md
docs/plans/: 2026-02-22-windows-gpu-setup-automation-design.md  2026-02-22-windows-gpu-setup-automation.md  2026-03-02-major-refactoring-plan.md
frontend/: index.html
gpu-worker/: .build-fixes  .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG-MUSETALK.md  DEPENDENCIES.md  DEPLOYMENT_SUMMARY.md  DIAGNOSIS.md  DOCKER-OPTIMIZATION.md  DOCKER-SETUP.md  DOCKER-WINDOWS.md  Dockerfile  Dockerfile.full  INSTALL-MUSETALK-NOW.md  MAKE_COMMANDS.md  MANUAL-DOWNLOAD-MUSETALK.md  MANUAL-INSTALL.txt  Makefile  QUICK-FIX.md  QUICKSTART-DOCKER.md  QUICK_COMMANDS.md  README.md  READY_TO_UPGRADE.md  START-HERE.md  START_HERE.md  TEST-API.md  TROUBLESHOOTING_HANGING.md  UPGRADE_NOW.md  UPGRADE_PLAN.md  VALIDATION_REPORT.md  VIDEO_API_GUIDE.md  VIDEO_QUICK_START.md  WINDOWS-INSTALL.md  add-openmmlab.bat  check-build-context.sh  check-files.ps1  check-models.bat  check-musetalk.bat  check-sd-vae.bat  (+83 more)
gpu-worker/lib/: common.ps1
gpu-worker/test/: README.md  test-install.ps1  test-server.ps1  test-service.ps1
lib/: config.ts  gpu-client.ts  logger.ts  prisma.ts  queue.ts  storage.ts  types.ts  video.ts
lib/services/: video.service.ts
prisma/: schema.prisma
tests/: README.md  setup.ts
tests/integration/: video-service.test.ts
tests/mocks/: gpu-server.mock.ts
tests/unit/: config.test.ts  gpu-client.simple.test.ts  logger.test.ts  queue.test.ts  storage.test.ts  types.test.ts  video.test.ts
tests/unit/lib/: video.test.ts
tests/unit/services/: video.service.test.ts
workers/: video-worker.ts
