[project]
name = "avatar-factory-gpu-worker"
version = "1.0.0"
description = "GPU Worker for Avatar Factory - AI model processing server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Avatar Factory", email = "contact@avatar-factory.local"}
]

dependencies = [
    # FastAPI Server (latest stable - February 2026)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    
    # AI Models (latest - fully compatible with PyTorch 2.7)
    "diffusers>=0.30.0",
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.3",
    "huggingface-hub>=0.23.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.0",
    
    # Audio (latest stable)
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "pydub>=0.25.1",
    "resampy>=0.4.3",
    "numba>=0.59.0",
    
    # Image Processing (latest)
    "opencv-python>=4.10.0",
    "pillow>=10.3.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.1",
    "scikit-image>=0.24.0",
    
    # Face Enhancement (latest)
    "gfpgan>=1.3.8",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "facexlib>=0.3.0",
    
    # Utilities (latest stable)
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "tqdm>=4.66.4",
    "omegaconf>=2.3.0",
    "einops>=0.8.0",
    "pyyaml>=6.0.1",
    "av>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# Note: PyTorch 2.7 has built-in SDPA, xformers not needed
# GPU enhancements are now in main dependencies
gpu = []

[project.urls]
Homepage = "https://github.com/Ne4to777/avatar-factory"
Repository = "https://github.com/Ne4to777/avatar-factory"
Issues = "https://github.com/Ne4to777/avatar-factory/issues"

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
